--- a/src/app/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/dashboard/dashboard-content/dashboard-content.component.html
@@ -9,33 +9,33 @@
   <div class="row">
     <div class="card-body col-sm-12 col-lg-6">
       <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-12">
           <!-- <h4 class="card-title mb-0"># Breached SLAs Trends</h4> -->
           <div class="small text-muted"># Breached SLAs Trends</div>
         </div>
         <!--/.col-->
-        <div class="col-sm-7 d-none d-md-block">
-        </div>
+        <!-- <div class="col-sm-7 d-none d-md-block">
+        </div> -->
         <!--/.col-->
       </div>
       <!--/.row-->
-      <div class="chart-wrapper" style="height:300px;margin-top:40px;">
+      <div class="chart-wrapper mt-4" style="height:300px;">
         <app-linechartcomponent></app-linechartcomponent>
       </div>
     </div>
     <div class="card-body col-sm-12 col-lg-6">
       <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-12">
           <!-- <h4 class="card-title mb-0"># Breached SLAs Trends</h4> -->
           <div class="small text-muted"># SLA Breach by Service Pacakages</div>
         </div>
         <!--/.col-->
-        <div class="col-sm-7 d-none d-md-block">
-        </div>
+        <!-- <div class="col-sm-7 d-none d-md-block">
+        </div> -->
         <!--/.col-->
       </div>
       <!--/.row-->
-      <div class="chart-wrapper" style="height:300px;margin-top:40px;">
+      <div class="chart-wrapper mt-4" style="height:300px;">
         <app-doughnutchartcomponent></app-doughnutchartcomponent>
       </div>
     </div>
