--- a/src/app/linechart/linechart.component.html
+++ b/src/app/linechart/linechart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block;  height: 400px; width: 400px">
+<div class="linechart-div">
   <canvas baseChart class="chart"
   [datasets]="lineChartData"
   [labels]="lineChartLabels"
@@ -8,5 +8,5 @@
   [chartType]="lineChartType"
   (chartHover)="chartHovered($event)"
   (chartClick)="chartClicked($event)"></canvas>
-  </div>
+</div>
   
