--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-md navbar-light sticky-top">
+<nav class="navbar navbar-expand-md w-100 mt-0 text-white">
   <div class="container-fluid spans">
     <div class="col-2 logo-div cursor-pointer">
       <a class="navbar-left" (click)="showHomePage()">
         <img src="assets/images/header/allianz_logo.png" alt="">
       </a>
     </div>
-    <div class="col-9 fa-lg"><span id='appTitle'>{{title}}</span></div>
+    <div class="col-9 title"><span id='appTitle'>{{title}}</span></div>
     <div class="col-1"></div>
   </div>
 </nav>
