--- a/src/app/doughnutchart/doughnutchart.component.html
+++ b/src/app/doughnutchart/doughnutchart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; height: 400px; width: 400px ">
+<div class="doughnutChart-div">
     <canvas baseChart 
       [data]="doughnutChartData"
       [labels]="doughnutChartLabels"
