--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,19 +1,7 @@
-#portfolioDiv .row img {
-    height: 50%;
-    width : 50%;
+.portfolioDiv img {
+    max-height: 25vh;
 }
 
-#projectsDiv .row img {
-    height: 40%;
-    width : 40%;
-}
-
-#portfolioDiv .row p {
-    width     : 50%;
-    text-align: center;
-}
-
-#projectsDiv .row p {
-    width     : 40%;
-    text-align: center;
+.projectDiv img {
+    height: 20vh;
 }
