--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,58 +1,48 @@
-<div class="content">
-    <div id="portfolioDiv" class="container" *ngIf="showPortfolio">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/folder.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Service Package 1</p>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/folder.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Service Package 2</p>
-            </div>
+<div class="container content">
+    <div class="row portfolioDiv" *ngIf="showPortfolio">
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p>Service Package 1</p>
         </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/folder.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Service Package 3</p>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/folder.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Service Package 4</p>
-            </div>
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p>Service Package 2</p>
+        </div>
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p>Service Package 3</p>
+        </div>
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p>Service Package 4</p>
         </div>
     </div>
 
-    <div id="projectsDiv" class="container" *ngIf="showProjects">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Project 1</p>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Project 2</p>
-            </div>
+    <div class="row projectDiv" *ngIf="showProjects">
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p class="pt-3">Project 1</p>
+        </div>
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p class="pt-3">Project 2</p>
         </div>
 
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Project 3</p>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                    (click)="handlePortFolioClickEvent($event)">
-                <p>Project 4</p>
-            </div>
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p class="pt-3">Project 3</p>
+        </div>
+        <div class="col-lg-6 text-center pt-5">
+            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
+                (click)="handlePortFolioClickEvent($event)">
+            <p class="pt-3">Project 4</p>
         </div>
     </div>
-
 </div>
