--- a/src/app/modules/dashboard/datasourcing/datasourcing.component.html
+++ b/src/app/modules/dashboard/datasourcing/datasourcing.component.html
@@ -73,7 +73,7 @@
       <div>
         <app-service-description></app-service-description>
         <app-key-contacts></app-key-contacts>
-        <app-datasourcingdetails></app-datasourcingdetails>
+        <app-datasourcing-details></app-datasourcing-details>
       </div><!-- content of dashboard -->
     </div>
   </main>
