page data correction and fix for alignment issues

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -59,10 +59,10 @@
           <div class="row dashboardbtn">
             <div class="btn-group btn-group-toggle mr-3 col-sm-12 " data-toggle="buttons"
               style="align-content: bottom;">
-              <label class="btn btn-outline-secondary bg-white" btnRadio="1" id="option1">Kraft</label>
-              <label class="btn btn-outline-secondary bg-white" btnRadio="2" id="option2">Life</label>
-              <label class="btn btn-outline-secondary bg-white" btnRadio="3" id="option3">CFS</label>
-              <label class="btn btn-outline-secondary bg-white" btnRadio="4" id="option4">PMS</label>
+              <label class="btn btn-outline-secondary bg-white" btnRadio="1" id="option1">Governance</label>
+              <label class="btn btn-outline-secondary bg-white" btnRadio="2" id="option2">Contracts</label>
+              <label class="btn btn-outline-secondary bg-white" btnRadio="3" id="option3">Knowledge Repo</label>
+              <label class="btn btn-outline-secondary bg-white" btnRadio="4" id="option4">Org & Contacts</label>
             </div>
           </div>
         </div>
