--- a/src/app/modules/dashboard/projects/project/project.component.html
+++ b/src/app/modules/dashboard/projects/project/project.component.html
@@ -10,33 +10,21 @@
     <div class="card-body col-sm-12 col-lg-6">
       <div class="row">
         <div class="col-sm-12">
-          <!-- <h4 class="card-title mb-0"># Breached SLAs Trends</h4> -->
           <div class="small text-muted"># Breached SLAs Trends</div>
         </div>
-        <!--/.col-->
-        <!-- <div class="col-sm-7 d-none d-md-block">
-        </div> -->
-        <!--/.col-->
       </div>
-      <!--/.row-->
       <div class="chart-wrapper mt-4" style="height:300px;">
-        <app-linechartcomponent></app-linechartcomponent>
+        <app-linechart-component></app-linechart-component>
       </div>
     </div>
     <div class="card-body col-sm-12 col-lg-6">
       <div class="row">
         <div class="col-sm-12">
-          <!-- <h4 class="card-title mb-0"># Breached SLAs Trends</h4> -->
           <div class="small text-muted"># SLA Breach by Service Pacakages</div>
         </div>
-        <!--/.col-->
-        <!-- <div class="col-sm-7 d-none d-md-block">
-        </div> -->
-        <!--/.col-->
       </div>
-      <!--/.row-->
       <div class="chart-wrapper mt-4" style="height:300px;">
-        <app-doughnutchartcomponent></app-doughnutchartcomponent>
+        <app-doughnutchart-component></app-doughnutchart-component>
       </div>
     </div>
   </div>
