dashboard-header module added to dashboard module

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,11 +1,10 @@
 <div class="content container-fluid">
   <main class="main">
     <div class="animated fadeIn">
-      <app-dashboard-static-content></app-dashboard-static-content>
+      <app-dashboard-header></app-dashboard-header>
       <div>
         <app-dashboard-content></app-dashboard-content>
       </div>
-      <!-- content of dashboard -->
     </div>
   </main>
 </div>
