--- a/src/app/modules/dashboard/dashboard-header/dashboard-title/dashboard-title.component.html
+++ b/src/app/modules/dashboard/dashboard-header/dashboard-title/dashboard-title.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-4">{{ project$?.name }} :: Data sourcing</div>
         <div class="col-sm-8">
-            Service Portfolio Dashboard
+            Service Package Dashboard
         </div>
     </div>
 </div>
