--- a/src/app/modules/dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/modules/dashboard/dashboard-header/dashboard-header.component.html
@@ -1,9 +1,9 @@
 <app-dashboard-title></app-dashboard-title>
 <div class="row">
-    <div class="col-sm-9 col-lg-9">
+    <div class="col-sm-7 col-md-8 col-lg-9">
         <app-dashboard-tiles></app-dashboard-tiles>
     </div>
-    <div class="col-sm-3 col-lg-3">
+    <div class="col-sm-5 col-md-4 col-lg-3">
         <app-document-buttons></app-document-buttons>
     </div>
 </div>
