1.    Integrated service offering service 2.    Code restructuring 3.    Service subscription and un-subscription related changes

--- a/src/app/modules/dashboard/dashboard-header/dashboard-tiles/dashboard-tiles.component.html
+++ b/src/app/modules/dashboard/dashboard-header/dashboard-tiles/dashboard-tiles.component.html
@@ -3,7 +3,7 @@
         <div class="card text-white bg-success tile">
             <div class="row tile-text">
                 <div class="card-body">
-                    <div class="text-value">{{ project$?.activeSLA }}</div>
+                    <div class="text-value">{{ projects$?.activeSLA }}</div>
                     <div class="card-">Active SLAs</div>
                 </div>
                 <div class="tile-icon">
@@ -16,7 +16,7 @@
         <div class="card text-white bg-warning tile">
             <div class="row tile-text">
                 <div class="card-body">
-                    <div class="text-value">{{ project$?.atRiskSLA }}</div>
+                    <div class="text-value">{{ projects$?.atRiskSLA }}</div>
                     <div>At Risk SLAs</div>
                 </div>
                 <div class="tile-icon">
@@ -30,7 +30,7 @@
             <div class="row tile-text">
                 <div class="card-body">
 
-                    <div class="text-value">{{ project$?.activeSLA }}</div>
+                    <div class="text-value">{{ projects$?.activeSLA }}</div>
                     <div>Breached SLAs</div>
                 </div>
 
