--- a/src/app/modules/dashboard/dashboard-header/dashboard-title/dashboard-title.component.html
+++ b/src/app/modules/dashboard/dashboard-header/dashboard-title/dashboard-title.component.html
@@ -1,6 +1,6 @@
 <div class="card card-header">
     <div class="row">
-        <div class="col-sm-4">{{ project$?.name }} :: Data sourcing</div>
+        <div class="col-sm-4">{{ projects$?.name }} :: Data sourcing</div>
         <div class="col-sm-8">
             Service Package Dashboard
         </div>
