Project Dashboard  dynamic changes

--- a/src/app/modules/dashboard/projects/project-info/project-info.component.html
+++ b/src/app/modules/dashboard/projects/project-info/project-info.component.html
@@ -14,17 +14,17 @@
             <tr *ngFor="let  subProject of  subProjects$" (click)="showDatasourcing($event)" class="cursor-pointer">
                 <td>
                     <div class="small text-muted">
-                        {{subProject.name}}
+                        {{subProject.projectName}}
                     </div>
                 </td>
                 <td>
                     <div class="small text-muted">
-                        {{subProject.domain}}
+                        {{subProject.department}}
                     </div>
                 </td>
                 <td>
                     <div class="small text-muted">
-                        {{subProject.manager}}
+                        {{subProject.serviceManager}}
                     </div>
                 </td>
                 <td>
