--- a/src/app/modules/dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/modules/dashboard/dashboard-header/dashboard-header.component.html
@@ -1,9 +1,11 @@
 <app-dashboard-title></app-dashboard-title>
-<div class="row">
-    <div class="col-sm-8 col-lg-8">
-        <app-dashboard-tiles></app-dashboard-tiles>
-    </div>
-    <div class="col-sm-4 col-lg-4">
-        <app-document-buttons></app-document-buttons>
+<div>
+    <div class="row">
+        <div class="col-lg-8">
+            <app-dashboard-tiles></app-dashboard-tiles>
+        </div>
+        <div class="col-lg-4">
+            <app-document-buttons></app-document-buttons>
+        </div>
     </div>
 </div>
