--- a/src/app/modules/dashboard/projects/project-info/project-info.component.html
+++ b/src/app/modules/dashboard/projects/project-info/project-info.component.html
@@ -1,5 +1,5 @@
-<div>
-    <table class="table table-responsive-sm table-hover table-outline mb-0">
+<div class="table-div">
+    <table class="table table-responsive-sm table-hover table-outline mb-0 table-fixed">
         <thead class="thead-light">
             <tr>
                 <th class="small">Service</th>
