--- a/src/app/modules/dashboard/service-record/datasourcing-details/datasourcing-details.component.html
+++ b/src/app/modules/dashboard/service-record/datasourcing-details/datasourcing-details.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="d-none">
         <ul>
           <li *ngFor="let datasource of datasourceFilters; let i = index" class="active"
            [class.active]="selectedIndex === i"
