--- a/src/app/modules/dashboard/dashboard-header/dashboard-tiles/dashboard-tiles.component.css
+++ b/src/app/modules/dashboard/dashboard-header/dashboard-tiles/dashboard-tiles.component.css
@@ -1,5 +1,6 @@
 .tile-icon {
     font-size: 2em;
+    margin-top: -2rem;
 }
 
 .card-body {
@@ -9,6 +10,7 @@
 
 .tile {
     height: 75px;
+    padding-top: 5px;
 }
 
 @media(max-width: 992px) {
