Project Dashboard table dynamically loading from db

--- a/src/app/modules/dashboard/projects/project-info/project-info.component.html
+++ b/src/app/modules/dashboard/projects/project-info/project-info.component.html
@@ -24,7 +24,7 @@
                 </td>
                 <td>
                     <div class="small text-muted">
-                        {{subProject.serviceManager}}
+                        {{subProject.serviceManagerName}}
                     </div>
                 </td>
                 <td>
