--- a/src/app/modules/dashboard/projects/project-info/project-info.component.html
+++ b/src/app/modules/dashboard/projects/project-info/project-info.component.html
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let subProject of subProjects$" (click)="showDatasourcing()" class="cursor-pointer">
+            <tr *ngFor="let subProject of projectDetails$" (click)="showDatasourcing()" class="cursor-pointer">
                 <td>
                     <div class="small text-muted">
                         {{subProject.projectName}}
