Code formatting and removed unnecessory files

--- a/src/app/modules/dashboard/service-record/services-sla/services-sla.component.html
+++ b/src/app/modules/dashboard/service-record/services-sla/services-sla.component.html
@@ -1,27 +1,32 @@
-
 <style type="text/css">
-	.TFtable{
-		width:100%; 
-		border-collapse:collapse; 
+    .TFtable {
+        width: 100%;
+        border-collapse: collapse;
     }
-    .TFtable th{ 
-        
-        padding:7px; border:black 1px solid;
-        background-color:rgb(121, 120, 120);
-	}
-	.TFtable td{ 
+
+    .TFtable th {
+
+        padding: 7px;
+        border: black 1px solid;
+        background-color: rgb(121, 120, 120);
+    }
+
+    .TFtable td {
         width: 150px;
-        padding:7px; border:black 1px solid;
-	}
-	.TFtable tr:nth-child(odd){ 
-		background:lightgray;
-	}
-	.TFtable tr:nth-child(even){
-		background: white;
-	}
+        padding: 7px;
+        border: black 1px solid;
+    }
+
+    .TFtable tr:nth-child(odd) {
+        background: lightgray;
+    }
+
+    .TFtable tr:nth-child(even) {
+        background: white;
+    }
 </style>
-<div class = "row serviceSla">
-<table class="table table-responsive-sm table-hover table-outline mb-0 TFtable">
+<div class="row serviceSla">
+    <table class="table table-responsive-sm table-hover table-outline mb-0 TFtable">
         <thead class="thead">
             <tr>
                 <th class="small">ServiceID</th>
@@ -43,28 +48,11 @@
                 </td>
                 <td>
                     <div class="small text">
-                       test
+                        test
                     </div>
                 </td>
             </tr>
             <tr>
-                    <td>
-                        <div class="small text">
-                            test
-                        </div>
-                    </td>
-                    <td>
-                        <div class="small text">
-                            test
-                        </div>
-                    </td>
-                    <td>
-                        <div class="small text">
-                           test
-                        </div>
-                    </td>
-                </tr>
-                <tr>
                 <td>
                     <div class="small text">
                         test
@@ -77,7 +65,24 @@
                 </td>
                 <td>
                     <div class="small text">
-                       test
+                        test
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="small text">
+                        test
+                    </div>
+                </td>
+                <td>
+                    <div class="small text">
+                        test
+                    </div>
+                </td>
+                <td>
+                    <div class="small text">
+                        test
                     </div>
                 </td>
             </tr>
