--- a/src/app/modules/dashboard/dashboard-header/document-buttons/document-buttons.component.html
+++ b/src/app/modules/dashboard/dashboard-header/document-buttons/document-buttons.component.html
@@ -1,7 +1,8 @@
 <div class="dashboardbtn">
     <div class="btn-group btn-group-toggle col-sm-12" data-toggle="buttons">
         <span class="btn btn-outline-secondary my-auto" btnRadio="1" id="option1">Governance</span>
-        <span class="btn btn-outline-secondary my-auto" btnRadio="2" id="option2" (click)="showContractsPage()">Contracts</span>
+        <span class="btn btn-outline-secondary my-auto" btnRadio="2" id="option2"
+            (click)="showContractsPage()">Contracts</span>
         <span class="btn btn-outline-secondary my-auto" btnRadio="3" id="option3">Knowledge Repo</span>
         <span class="btn btn-outline-secondary my-auto" btnRadio="4" id="option4">Org & Contacts</span>
     </div>
