--- a/src/app/modules/dashboard/service-record/datasourcing-details/datasourcing-details.component.html
+++ b/src/app/modules/dashboard/service-record/datasourcing-details/datasourcing-details.component.html
@@ -1,9 +1,8 @@
 <div class="d-none">
-        <ul>
-          <li *ngFor="let datasource of datasourceFilters; let i = index" class="active"
-           [class.active]="selectedIndex === i"
-          (click)="ChangeDatasourceFilter(i,datasource.value)">
-            {{datasource.name}}
-          </li>
-        </ul>
-      </div>
+  <ul>
+    <li *ngFor="let datasource of datasourceFilters; let i = index" class="active" [class.active]="selectedIndex === i"
+      (click)="ChangeDatasourceFilter(i,datasource.value)">
+      {{datasource.name}}
+    </li>
+  </ul>
+</div>
