--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,5 @@ app-footer {
   width : 100%;
   height: 10%;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
