--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -1,89 +1,17 @@
 <div class="container content">
     <div class="row portfolioDiv" *ngIf="showPortfolio">
-
-        <div class="col-lg-6 text-center pt-5">
+        <div class="col-lg-6 text-center pt-5" *ngFor="let serviceOffering of serviceOfferings$">
             <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
                 (click)="handlePortFolioClickEvent($event)">
-            <p>Service Package 1</p>
+            <p>{{serviceOffering.name}}</p>
         </div>
-        <div class="col-lg-6 text-center pt-5">
-            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
-                (click)="handlePortFolioClickEvent($event)">
-            <p>Service Package 2</p>
-        </div>
-        <div class="col-lg-6 text-center pt-5">
-            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
-                (click)="handlePortFolioClickEvent($event)">
-            <p>Service Package 3</p>
-        </div>
-        <div class="col-lg-6 text-center pt-5">
-            <img class="img-fluid cursor-pointer mh-50" src="assets/images/portfolio/folder.svg"
-                (click)="handlePortFolioClickEvent($event)">
-            <p>Service Package 4</p>
-        </div>
-
-        <!-- Code snippet to dynamically load values from server -->
-        <div class="panel panel-primary">
-            <div class="panel-body">
-                <table class="table table-striped">
-                    <tbody>
-                        <tr *ngFor="let serviceOffering of serviceOfferings$">
-                            <td>{{serviceOffering.id}}</td>
-                            <td>{{serviceOffering.name}}</td>
-                            <td>{{serviceOffering.decription}}</td>
-                            <td>{{serviceOffering.businessWeightage}}</td>
-                            <td>{{serviceOffering.operatingEntityId}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <!-- Code snippet to dynamically load values from server -->
-
     </div>
 
     <div class="row projectDiv" *ngIf="showProjects">
-        <div class="col-lg-6 text-center pt-5">
+        <div class="col-lg-6 text-center pt-5" *ngFor="let portfolio of portfolios$">
             <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
                 (click)="handleProjectClickEvent($event)">
-            <p class="pt-3">Project 1</p>
+            <p class="pt-3">{{portfolio.name}}</p>
         </div>
-        <div class="col-lg-6 text-center pt-5">
-            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                (click)="handleProjectClickEvent($event)">
-            <p class="pt-3">Project 2</p>
-        </div>
-
-        <div class="col-lg-6 text-center pt-5">
-            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                (click)="handleProjectClickEvent($event)">
-            <p class="pt-3">Project 3</p>
-        </div>
-        <div class="col-lg-6 text-center pt-5">
-            <img class="img-fluid cursor-pointer" src="assets/images/portfolio/project.svg"
-                (click)="handleProjectClickEvent($event)">
-            <p class="pt-3">Project 4</p>
-        </div>
-
-         <!-- Code snippet to dynamically load values from server -->
-         <div class="panel panel-primary">
-            <div class="panel-body">
-                <table class="table table-striped">
-                    <tbody>
-                        <tr *ngFor="let portfolio of portfolios$">
-                            <td>{{portfolio.id}}</td>
-                            <td>{{portfolio.name}}</td>
-                            <td>{{portfolio.decription}}</td>
-                            <td>{{portfolio.solution}}</td>
-                            <td>{{portfolio.portfolioModel}}</td>
-                            <td>{{portfolio.businessWeightage}}</td>
-                            <td>{{portfolio.serviceOfferingId}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <!-- Code snippet to dynamically load values from server -->
-
     </div>
 </div>
