--- a/src/app/modules/dashboard/projects/project-info/project-info.component.html
+++ b/src/app/modules/dashboard/projects/project-info/project-info.component.html
@@ -14,7 +14,7 @@
             <tr *ngFor="let subProject of projectDetails$" (click)="showDatasourcing()" class="cursor-pointer">
                 <td>
                     <div class="small text-muted">
-                        {{subProject.projectName}}
+                        {{subProject.name}}
                     </div>
                 </td>
                 <td>
@@ -24,7 +24,7 @@
                 </td>
                 <td>
                     <div class="small text-muted">
-                        {{subProject.serviceManagerName}}
+                        {{subProject.manager.firstName}} {{subProject.manager.lastName}}
                     </div>
                 </td>
                 <td>
