--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,10 +1,8 @@
 <div class="content" role="main">
   <div class="card-container">
-    <a *ngFor="let oe of oeList" class="round-button" [class.disabled]="oe.isDisabled" [id]="oe.title"
-      [title]="oe.title" (click)="handleHomeButtonClick($event)">
-      <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">
-        <image [attr.xlink:href]="oe.imgHref" width="100" height="100" />
-      </svg>
+    <a *ngFor="let oe of oeList$" [id]="oe.country.code" [title]="oe.country.name"
+      (click)="handleHomeButtonClick($event)">
+      <span [ngClass]="['flag-icon', 'round-button', 'flag-icon-' + oe.country.code | lowercase]"></span>
     </a>
   </div>
 </div>
