--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="content" role="main">
   <div class="card-container">
     <a *ngFor="let oe of oeList$" [id]="oe.country.code" [title]="oe.country.name"
-      (click)="handleHomeButtonClick($event)">
+      [attr.data-oeid]="oe.id" (click)="handleHomeButtonClick($event)">
       <span [ngClass]="['flag-icon', 'round-button', 'flag-icon-' + oe.country.code | lowercase]"></span>
     </a>
   </div>
