1. Introduced the concept of reading error messages from json file, from now on all the error messages will be stored in this file and will be read using a utility class 2. Removed hard coding of service offering and portfolio id values to the server apis

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container content" role="main">
   <div class="card-container">
     <div *ngFor="let oe of oeList$" class="w-25">
-      <a [id]="oe.country.code" [title]="oe.country.name" [attr.data-oeid]="oe.id"
+      <a [id]="oe.country.code" [title]="oe.country.name" [attr.data-oe_id]="oe.id"
         (click)="handleHomeButtonClick($event)">
         <span
           [ngClass]="['flag-icon', 'round-button', 'flag-icon-' + oe.country.code | lowercase,'d-inline-block']"></span>
